Add pseudo and child selectors to css

--- a/css/css-demo/styles/practice.css
+++ b/css/css-demo/styles/practice.css
@@ -7,3 +7,9 @@ section#contact-info p, .job ul {
   padding: 10px 20px;
   margin: 20px 0;
 }
+section.job:hover {
+  background-color: #19abb5;
+}
+section.job ul li {
+  list-style-type: circle;
+}
