--- a/css/responsive-design/style.css
+++ b/css/responsive-design/style.css
@@ -1,6 +1,10 @@
 body {
   width: 960px;
 }
+main {
+  display: inline-block;
+  width: 756px;
+}
 blockquote {
   border-left: 5px solid blue;
   padding: 15px;
@@ -10,6 +14,11 @@ blockquote {
 cite {
   display: block;
   margin-top: 10px;
+}
+#external-links {
+  width: 200px;
+  display: inline-block;
+  vertical-align: top;
 }
 
 #external-links ul {
