--- a/css/responsive-design/style.css
+++ b/css/responsive-design/style.css
@@ -1,9 +1,11 @@
 body {
-  width: 960px;
+  max-width: 960px;
+  margin-left: auto;
+  margin-right: auto;
 }
 main {
   display: inline-block;
-  width: 756px;
+  width: 80%;
 }
 blockquote {
   border-left: 5px solid blue;
@@ -16,7 +18,9 @@ cite {
   margin-top: 10px;
 }
 #external-links {
-  width: 200px;
+  width: 15%;
+  padding-left: 15px;
+  padding-right: 25px;
   display: inline-block;
   vertical-align: top;
 }
@@ -42,3 +46,22 @@ figcaption {
   font-style: italic;
   text-align: right;
 }
+@media screen and (max-width: 610px) {
+  #external-links {
+    width: 100%;
+  }
+  main {
+    width: 100%;
+  }
+}
+@media screen and (max-width: 500px) {
+  h1 {
+    font-size: 1.5em;
+  }
+}
+
+/* @media screen and (max-width: 500px) {
+  body {
+    background-color: hotpink;
+  }
+}*/
