--- a/css/positioning/octopus.css
+++ b/css/positioning/octopus.css
@@ -1,5 +1,5 @@
 
-html {
+div {
   width: 100%;
   height: 100%;
 }
@@ -9,12 +9,12 @@ html {
   margin-top: 200px;
 }
 .hat {
-  position: absolute;
-  top: 125px;
-  left: 40%;
+  position: relative;
+  bottom: 360;
+  left: 420;
 }
 .glasses {
-  position: absolute;
-  top: 305px;
-  left: 45%;
+  position: relative;
+  top: 0;
+  left: 0;
 }
