--- a/css/positioning/octopus.css
+++ b/css/positioning/octopus.css
@@ -1,21 +1,18 @@
-
-div {
-  width: 100%;
-  height: 100%;
-}
-#octopus {
+img {
+  border: 2px solid blue;
   display: block;
-  position: relative;
+}
+
+#octopus {
   margin: auto;
   margin-top: 200px;
 }
+
 #hat {
-  position: relative;
-  bottom: 375px;
-  left: 410px;
+  position: absolute;
+
 }
+
 #glasses {
-  position: relative;
-  bottom: 300px;
-  left: 200px;
+  position: absolute;
 }
