Add width and text-align to hat and glasses images

--- a/css/positioning/octopus.css
+++ b/css/positioning/octopus.css
@@ -21,13 +21,15 @@ img {
 
 #hat {
   position: absolute;
-  left: 40%;
+  width: 100%;
+  text-align: center;
   top: 125px;
 
 }
 
 #glasses {
   position: absolute;
-  left: 45%;
+  width: 100%;
+  text-align: center;
   top: 300px;
 }
