--- a/css/positioning/octopus.css
+++ b/css/positioning/octopus.css
@@ -7,11 +7,8 @@ body {
   max-width: 80%;
   margin: 0 auto;
 }
-img {
-  border: 2px solid blue;
-}
 
-#octo-wrapper img {
+#octopus {
   position: absolute;
   left: 0;
   right: 0;
