--- a/css/gps/gps2-1.css
+++ b/css/gps/gps2-1.css
@@ -1,5 +1,18 @@
+body {
+  font-family: Helvetica, sans-serif;
+  width: 90%;
+  margin: 0 auto;
+}
+h1, h2 {
+  font-family: Times, serif;
+}
 header {
     background-color: #5d5d5d;
+}
+header h1 {
+  text-align: center;
+  color: #ffffff;
+  padding-top: 15px;
 }
 .column-1 {
     background-color: #c7c7c7;
