--- a/css/gps/gps2-1.css
+++ b/css/gps/gps2-1.css
@@ -7,6 +7,10 @@ body {
 h1, h2 {
   font-family: Times, serif;
 }
+h2 {
+  margin-top: 40px;
+  margin-bottom: -10px;
+}
 header {
     background-color: #5d5d5d;
     margin-bottom: 0;
@@ -27,12 +31,17 @@ header p {
     display: inline-block;
     width: 45%;
     vertical-align: top;
+    padding: 15px;
+}
+.column-1 ul li {
+  list-style: square;
 }
 .column-2 {
     background-color: #c7c7c7;
     display: inline-block;
     width: 45%;
     vertical-align: top;
+    padding: 15px;
 }
 footer {
     background-color: #000000;
